# icu

icu4c/source/: meson.build  meson_options.txt
icu4c/source/common/: meson.build
icu4c/source/i18n/: meson.build
icu4c/source/io/: meson.build
icu4c/source/meson/: lines_as_string.py  version_number.py
icu4c/source/stubdata/: meson.build
icu4c/source/tools/: meson.build
icu4c/source/tools/ctestfw/: meson.build
icu4c/source/tools/toolutil/: meson.build
