option('data_packaging', type : 'string', value : 'library', description : 'One of: files (raw individual files), archive (a single .dat file), library (a shared library), static (a static library)')

option('enable_dyload', type : 'boolean', value : true, description : 'Whether to enable dynamic loading of plugins')

option('enable_icuio', type : 'boolean', value : true, description : 'Whether to build ICU\'s I/O library')
